Re-Fixed lock scroll bar overflow

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -826,8 +826,8 @@ a.modal-close svg path{
 }
 
 .un-lock-scroll {
-    overflow-y: visible ;
-    /* overflow-y: scroll ; */
+    /* overflow-y: visible ; */
+    overflow-y: overlay ;
 }
 
 #alert_modal_message{
